Bug 407559 - long list of apps can't be fully seen in app chooser
Summary: long list of apps can't be fully seen in app chooser
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-15 14:00 UTC by Evstifeev Roman
Modified: 2019-05-16 11:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Evstifeev Roman 2019-05-15 14:00:34 UTC
SUMMARY
App chooser app icons are very large, and window has no scrollbar, so if you have many apps associated with file type, it is not possible to see the full list.

STEPS TO REPRODUCE
1. open file from flatpak application.

OBSERVED RESULT
On the screenshot, i have many apps to chose from, and can't see the end of the list:
https://i.imgur.com/rDwK2YK.png

EXPECTED RESULT
I should be able to see and pick any app from the list

version:
xdg-desktop-portal-kde-5.15.5-1.1.x86_64
Comment 1 Jan Grulich 2019-05-16 11:05:42 UTC
Git commit 83773f6682154723d2a68e731c0e87c1f1a06893 by Jan Grulich.
Committed on 16/05/2019 at 11:05.
Pushed by grulich into branch 'Plasma/5.15'.

AppChooser: put list of applications into a scrollarea
FIXED-IN: 5.15.6

M  +16   -2    src/appchooserdialog.cpp
M  +1    -0    src/appchooserdialogitem.cpp

https://commits.kde.org/xdg-desktop-portal-kde/83773f6682154723d2a68e731c0e87c1f1a06893