AppChooser: put list of applications into a scrollarea

BUG:407559
FIXED-IN: 5.15.6